force-app/main/default/objects/Employee1__c/Employee1__c.object-meta.xml
<CustomObject>
    <label>EMPLOYEE</label>
    <nameField>
        <displayFormat>EMP-{000000}</displayFormat>
        <label>Employee ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EMPLOYEES</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>