force-app/main/default/objects/Employee1__c/fields/Annual_CTC__c.field-meta.xml
<CustomField>
    <fullName>Annual_CTC__c</fullName>
    <label>Annual CTC</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>