force-app/main/default/objects/Employee1__c/fields/Date_of_Joining__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Joining__c</fullName>
    <label>Date of Joining</label>
    <required>true</required>
    <type>Date</type>
</CustomField>