force-app/main/default/objects/Employee1__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Department</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>EMPLOYEES</relationshipLabel>
    <relationshipName>EMPLOYEES</relationshipName>
    <type>Lookup</type>
</CustomField>