force-app/main/default/objects/Employee1__c/fields/Is_On_Notice_Period__c.field-meta.xml
<CustomField>
    <fullName>Is_On_Notice_Period__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is On Notice Period</label>
    <type>Checkbox</type>
</CustomField>