force-app/main/default/objects/Employee1__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Employee1__c.Role__r.Name</field>
            <operation>equals</operation>
            <value>Project Manager</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Employee1__c</referenceTo>
    <relationshipLabel>EMPLOYEES</relationshipLabel>
    <relationshipName>EMPLOYEES</relationshipName>
    <type>Lookup</type>
</CustomField>