force-app/main/default/objects/Employee1__c/fields/Project_Details__c.field-meta.xml
<CustomField>
    <fullName>Project_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Details</label>
    <referenceTo>Project_Details__c</referenceTo>
    <relationshipLabel>EMPLOYEES</relationshipLabel>
    <relationshipName>EMPLOYEES</relationshipName>
    <type>Lookup</type>
</CustomField>