force-app/main/default/objects/Employee1__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Role</label>
    <referenceTo>Role__c</referenceTo>
    <relationshipLabel>EMPLOYEES</relationshipLabel>
    <relationshipName>EMPLOYEES</relationshipName>
    <type>Lookup</type>
</CustomField>