force-app/main/default/objects/Employee1__c/fields/Status_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Status_Indicator__c</fullName>
    <formula>CASE (text (Status__c),
&quot;Active&quot;, IMAGE (&quot;/img/samples/color_green.gif&quot;,&quot;green&quot;),
&quot;On Notice Period&quot;, IMAGE (&quot;/img/samples/color_yellow.gif &quot;, &quot;yellow&quot;),
&quot;In-Active&quot;, IMAGE (&quot;/img/samples/color_red.gif&quot;,&quot;red&quot;),
&quot;default&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Indicator</label>
    <type>Text</type>
</CustomField>