force-app/main/default/objects/Employee1__c/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <label>Zip</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
</CustomField>