force-app/main/default/objects/Employee1__c/recordTypes/Non_Technical.recordType-meta.xml
<RecordType>
    <fullName>Non_Technical</fullName>
    <active>true</active>
    <label>Non-Technical</label>
</RecordType>