force-app/main/default/objects/Employee1__c/validationRules/Age.validationRule-meta.xml
<ValidationRule>
    <fullName>Age</fullName>
    <active>true</active>
    <errorConditionFormula>Year( TODAY() ) - Year( Date_of_Birth__c ) &lt; 21 || Year( TODAY() ) - Year( Date_of_Birth__c ) &gt; 30</errorConditionFormula>
    <errorMessage>Age must be within 21-30</errorMessage>
</ValidationRule>