force-app/main/default/objects/Employee1__c/validationRules/Last_working_date_cannot_be_greater_than.validationRule-meta.xml
<ValidationRule>
    <fullName>Last_working_date_cannot_be_greater_than</fullName>
    <active>false</active>
    <errorConditionFormula>Date_of_Joining__c  &lt;  Last_Working_Day__c</errorConditionFormula>
    <errorMessage>Last working day cannot be greater than joining date</errorMessage>
</ValidationRule>