force-app/main/default/objects/Employee1__c/validationRules/Resignation_date_cannot_be_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Resignation_date_cannot_be_null</fullName>
    <active>true</active>
    <description>If notice period is checked to true, resignation date cannot be null</description>
    <errorConditionFormula>Is_On_Notice_Period__c=TRUE &amp;&amp; ISBLANK( Resignation_Date__c )</errorConditionFormula>
    <errorMessage>Resignation date cannot be null</errorMessage>
</ValidationRule>