force-app/main/default/objects/Employee1__c/validationRules/SSN_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>SSN_Number</fullName>
    <active>true</active>
    <errorConditionFormula>SSN__c &gt;9999999999</errorConditionFormula>
    <errorMessage>No. of digits must be less than or equal to 10</errorMessage>
</ValidationRule>