force-app/main/default/objects/Employee1__c/listViews/Inactive.listView-meta.xml
<ListView>
    <fullName>Inactive</fullName>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Role__c</columns>
    <columns>Date_of_Joining__c</columns>
    <columns>Last_Working_Day__c</columns>
    <columns>Status_Indicator__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In-Active</value>
    </filters>
    <label>Inactive</label>
    <sharedTo>
        <role>HR_Manager</role>
    </sharedTo>
</ListView>